--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -12,15 +12,53 @@
             android:layout_height="match_parent">
 
         <com.mikhaellopez.circularimageview.CircularImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:src="@mipmap/ic_launcher"
                 app:civ_border_color="#EEEEEE"
-                app:civ_border_width="4dp"
+                app:civ_border_width="1dp"
                 app:civ_shadow="true"
-                app:civ_shadow_radius="10"
+                app:civ_shadow_radius="4"
                 app:civ_shadow_color="#8BC34A" android:layout_marginTop="16dp"
                 app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+                android:id="@+id/circularImageView"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/post_username"
+                app:layout_constraintBottom_toTopOf="@+id/circularImageView"
+                app:layout_constraintTop_toBottomOf="@+id/circularImageView"
+                app:layout_constraintStart_toEndOf="@+id/circularImageView" android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp" tools:text="username" android:fontFamily="@font/roboto"/>
+        <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/post_title" tools:text="Post title"
+                app:layout_constraintStart_toStartOf="@+id/post_username"
+                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/post_username"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp" android:fontFamily="@font/roboto" android:maxLines="1"
+                android:ellipsize="end"/>
+        <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/post_description"
+                app:layout_constraintTop_toBottomOf="@+id/post_title"
+                tools:text="If you require support for training products you have already purchased, including technical support.If you require support for training products you have already purchased, including technical support"
+                app:layout_constraintEnd_toEndOf="@+id/post_title"
+                app:layout_constraintStart_toStartOf="@+id/post_title"
+                android:layout_marginTop="8dp" android:fontFamily="@font/roboto" android:maxLines="2"
+                android:ellipsize="end" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/post_comments_count"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="@+id/post_description"
+                android:id="@+id/post_comments_count"
+                tools:text=" 12 "
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:drawableEnd="@drawable/ic_comments_regular" tools:layout_editor_absoluteY="160dp"
+                android:drawablePadding="4" android:fontFamily="@font/roboto_medium" android:textSize="14sp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
