--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -4,7 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="wrap_content">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,27 +19,32 @@
                 app:civ_border_width="1dp"
                 app:civ_shadow="true"
                 app:civ_shadow_radius="4"
-                app:civ_shadow_color="#8BC34A" android:layout_marginTop="16dp"
-                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
-                android:id="@+id/circularImageView"/>
+                app:civ_shadow_color="#8BC34A"
+                android:id="@+id/circularImageView"
+                android:layout_marginBottom="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/comment_body" android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="@+id/comment_body"
+        />
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/comment_email"
+                tools:text="username" android:fontFamily="@font/roboto"
+                android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/circularImageView"
                 app:layout_constraintTop_toBottomOf="@+id/circularImageView"
-                app:layout_constraintStart_toEndOf="@+id/circularImageView" android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp" tools:text="username" android:fontFamily="@font/roboto"/>
+                app:layout_constraintEnd_toStartOf="@+id/circularImageView" android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"/>
         <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/comment_title" tools:text="Post title"
-                app:layout_constraintStart_toStartOf="@+id/comment_email"
-                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/comment_email"
+                android:id="@+id/comment_title" tools:text="Comment title"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp" android:fontFamily="@font/roboto" android:maxLines="1"
-                android:ellipsize="end"/>
+                android:ellipsize="end" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginStart="16dp" android:layout_marginLeft="16dp"/>
         <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -48,19 +53,8 @@
                 tools:text="If you require support for training products you have already purchased, including technical support.If you require support for training products you have already purchased, including technical support"
                 app:layout_constraintEnd_toEndOf="@+id/comment_title"
                 app:layout_constraintStart_toStartOf="@+id/comment_title"
-                android:layout_marginTop="8dp" android:fontFamily="@font/roboto" android:maxLines="3"
-                android:ellipsize="end" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/post_comments_count"/>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="@+id/comment_body"
-                android:id="@+id/post_comments_count"
-                tools:text=" 12 "
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:drawableEnd="@drawable/ic_comments_regular"
-                android:drawablePadding="4dp" android:fontFamily="@font/roboto_medium" android:textSize="14sp"
-                android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
-                android:drawableRight="@drawable/ic_comments_regular"/>
+                android:layout_marginTop="8dp" android:fontFamily="@font/roboto"
+                android:ellipsize="end"
+                android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
