--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -4,7 +4,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="@dimen/custom_height_card"
+        android:layout_margin="@dimen/margin_8dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,7 +27,7 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/comment_email"
+                android:id="@+id/user_name"
                 app:layout_constraintBottom_toTopOf="@+id/circularImageView"
                 app:layout_constraintTop_toBottomOf="@+id/circularImageView"
                 app:layout_constraintStart_toEndOf="@+id/circularImageView" android:layout_marginLeft="8dp"
@@ -34,27 +35,27 @@
         <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/comment_title" tools:text="Post title"
-                app:layout_constraintStart_toStartOf="@+id/comment_email"
-                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/comment_email"
+                android:id="@+id/user_email" tools:text="Post title"
+                app:layout_constraintStart_toStartOf="@+id/user_name"
+                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/user_name"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp" android:fontFamily="@font/roboto" android:maxLines="1"
                 android:ellipsize="end"/>
         <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/comment_body"
-                app:layout_constraintTop_toBottomOf="@+id/comment_title"
+                android:id="@+id/user_username"
+                app:layout_constraintTop_toBottomOf="@+id/user_email"
                 tools:text="If you require support for training products you have already purchased, including technical support.If you require support for training products you have already purchased, including technical support"
-                app:layout_constraintEnd_toEndOf="@+id/comment_title"
-                app:layout_constraintStart_toStartOf="@+id/comment_title"
+                app:layout_constraintEnd_toEndOf="@+id/user_email"
+                app:layout_constraintStart_toStartOf="@+id/user_email"
                 android:layout_marginTop="8dp" android:fontFamily="@font/roboto" android:maxLines="3"
                 android:ellipsize="end" android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/post_comments_count"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="@+id/comment_body"
+                app:layout_constraintEnd_toEndOf="@+id/user_username"
                 android:id="@+id/post_comments_count"
                 tools:text=" 12 "
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
