--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_8dp">
+        android:layout_margin="@dimen/margin_8dp" android:id="@+id/cardView">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -13,49 +13,54 @@
             android:layout_height="match_parent">
 
         <com.mikhaellopez.circularimageview.CircularImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:src="@mipmap/ic_launcher"
                 app:civ_border_color="#EEEEEE"
                 app:civ_border_width="1dp"
                 app:civ_shadow="true"
                 app:civ_shadow_radius="4"
                 app:civ_shadow_color="#8BC34A"
+                app:layout_constraintStart_toStartOf="parent"
                 android:id="@+id/circularImageView"
-                android:layout_marginBottom="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/user_username" android:layout_marginTop="8dp"
-                app:layout_constraintEnd_toEndOf="@+id/user_username"
-        />
+                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.503"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/user_name"
-                tools:text="username" android:fontFamily="@font/roboto"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/circularImageView"
-                app:layout_constraintTop_toBottomOf="@+id/circularImageView"
-                app:layout_constraintEnd_toStartOf="@+id/circularImageView" android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"/>
+                app:layout_constraintStart_toEndOf="@+id/circularImageView" android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp" tools:text="Jose Luis Crisostomo" android:fontFamily="@font/roboto"
+                android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
         <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/user_email" tools:text="Comment title"
-                app:layout_constraintStart_toStartOf="parent"
+                android:id="@+id/user_email" tools:text="jl.cs606@gmail.com"
+                app:layout_constraintStart_toStartOf="@+id/user_name"
+                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/user_name"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp" android:fontFamily="@font/roboto" android:maxLines="1"
-                android:ellipsize="end" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginStart="16dp" android:layout_marginLeft="16dp"/>
+                android:ellipsize="end"/>
         <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/user_username"
                 app:layout_constraintTop_toBottomOf="@+id/user_email"
-                tools:text="If you require support for training products you have already purchased, including technical support.If you require support for training products you have already purchased, including technical support"
+                tools:text="simplekjl"
                 app:layout_constraintEnd_toEndOf="@+id/user_email"
                 app:layout_constraintStart_toStartOf="@+id/user_email"
-                android:layout_marginTop="8dp" android:fontFamily="@font/roboto"
+                android:layout_marginTop="16dp" android:fontFamily="@font/roboto" android:maxLines="3"
                 android:ellipsize="end"
-                android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
+        />
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button2"
+                android:layout_marginBottom="16dp"
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@+id/user_username"
+                app:layout_constraintTop_toBottomOf="@+id/user_username" android:layout_marginTop="8dp"
+                style="@style/Widget.AppCompat.Button.Borderless" android:textSize="12sp"
+                android:text="@string/more_details" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
