--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_8dp">
+        android:layout_margin="@dimen/margin_8dp" android:id="@+id/comment_card">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -21,41 +21,33 @@
                 app:civ_shadow="true"
                 app:civ_shadow_radius="4"
                 app:civ_shadow_color="#8BC34A"
-                android:id="@+id/circularImageView"
+                android:id="@+id/comment_profile_photo"
                 android:layout_marginBottom="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/user_username" android:layout_marginTop="8dp"
-                app:layout_constraintEnd_toEndOf="@+id/user_username"
+                app:layout_constraintTop_toBottomOf="@+id/comment_body" android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="@+id/comment_body"
         />
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/user_name"
+                android:id="@+id/comment_username"
                 tools:text="username" android:fontFamily="@font/roboto"
                 android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/circularImageView"
-                app:layout_constraintTop_toBottomOf="@+id/circularImageView"
-                app:layout_constraintEnd_toStartOf="@+id/circularImageView" android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"/>
+                app:layout_constraintBottom_toTopOf="@+id/comment_profile_photo"
+                app:layout_constraintTop_toBottomOf="@+id/comment_profile_photo"
+                app:layout_constraintEnd_toStartOf="@+id/comment_profile_photo" android:layout_marginEnd="8dp"
+        />
         <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/user_email" tools:text="Comment title"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp" android:fontFamily="@font/roboto" android:maxLines="1"
-                android:ellipsize="end" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginStart="16dp" android:layout_marginLeft="16dp"/>
-        <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/user_username"
-                app:layout_constraintTop_toBottomOf="@+id/user_email"
+                android:id="@+id/comment_body"
                 tools:text="If you require support for training products you have already purchased, including technical support.If you require support for training products you have already purchased, including technical support"
-                app:layout_constraintEnd_toEndOf="@+id/user_email"
-                app:layout_constraintStart_toStartOf="@+id/user_email"
-                android:layout_marginTop="8dp" android:fontFamily="@font/roboto"
+                android:fontFamily="@font/roboto"
                 android:ellipsize="end"
-                android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
+                android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
