--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -22,40 +22,40 @@
                 app:civ_shadow_radius="4"
                 app:civ_shadow_color="#8BC34A" android:layout_marginTop="16dp"
                 app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
-                android:id="@+id/circularImageView"/>
+                app:layout_constraintStart_toStartOf="parent"
+                android:id="@+id/post_profile_photo"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/user_name"
-                app:layout_constraintBottom_toTopOf="@+id/circularImageView"
-                app:layout_constraintTop_toBottomOf="@+id/circularImageView"
-                app:layout_constraintStart_toEndOf="@+id/circularImageView" android:layout_marginLeft="8dp"
+                android:id="@+id/post_username"
+                app:layout_constraintBottom_toTopOf="@+id/post_profile_photo"
+                app:layout_constraintTop_toBottomOf="@+id/post_profile_photo"
+                app:layout_constraintStart_toEndOf="@+id/post_profile_photo"
                 android:layout_marginStart="8dp" tools:text="username" android:fontFamily="@font/roboto"/>
         <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/user_email" tools:text="Post title"
-                app:layout_constraintStart_toStartOf="@+id/user_name"
-                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/user_name"
+                android:id="@+id/post_title" tools:text="Post title"
+                app:layout_constraintStart_toStartOf="@+id/post_username"
+                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/post_username"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp" android:fontFamily="@font/roboto" android:maxLines="1"
+                android:fontFamily="@font/roboto" android:maxLines="1"
                 android:ellipsize="end"/>
         <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/user_username"
-                app:layout_constraintTop_toBottomOf="@+id/user_email"
+                android:id="@+id/post_body"
+                app:layout_constraintTop_toBottomOf="@+id/post_title"
                 tools:text="If you require support for training products you have already purchased, including technical support.If you require support for training products you have already purchased, including technical support"
-                app:layout_constraintEnd_toEndOf="@+id/user_email"
-                app:layout_constraintStart_toStartOf="@+id/user_email"
+                app:layout_constraintEnd_toEndOf="@+id/post_title"
+                app:layout_constraintStart_toStartOf="@+id/post_title"
                 android:layout_marginTop="8dp" android:fontFamily="@font/roboto" android:maxLines="3"
                 android:ellipsize="end" android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/post_comments_count"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="@+id/user_username"
+                app:layout_constraintEnd_toEndOf="@+id/post_body"
                 android:id="@+id/post_comments_count"
                 tools:text=" 12 "
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
