--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -6,8 +6,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_8dp" android:id="@+id/cardView">
-
-
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -22,44 +20,44 @@
                 app:civ_shadow_radius="4"
                 app:civ_shadow_color="#8BC34A"
                 app:layout_constraintStart_toStartOf="parent"
-                android:id="@+id/circularImageView"
+                android:id="@+id/user_profile_photo"
                 android:layout_marginLeft="16dp"
                 android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.503"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/user_name"
-                app:layout_constraintStart_toEndOf="@+id/circularImageView" android:layout_marginLeft="16dp"
+                android:id="@+id/comment_username"
+                app:layout_constraintStart_toEndOf="@+id/user_profile_photo" android:layout_marginLeft="16dp"
                 android:layout_marginStart="16dp" tools:text="Jose Luis Crisostomo" android:fontFamily="@font/roboto"
                 android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
         <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/user_email" tools:text="jl.cs606@gmail.com"
-                app:layout_constraintStart_toStartOf="@+id/user_name"
-                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/user_name"
+                android:id="@+id/comment_user_email" tools:text="jl.cs606@gmail.com"
+                app:layout_constraintStart_toStartOf="@+id/comment_username"
+                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/comment_username"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp" android:fontFamily="@font/roboto" android:maxLines="1"
                 android:ellipsize="end"/>
         <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/user_username"
-                app:layout_constraintTop_toBottomOf="@+id/user_email"
+                android:id="@+id/comment_body"
+                app:layout_constraintTop_toBottomOf="@+id/comment_user_email"
                 tools:text="simplekjl"
-                app:layout_constraintEnd_toEndOf="@+id/user_email"
-                app:layout_constraintStart_toStartOf="@+id/user_email"
+                app:layout_constraintEnd_toEndOf="@+id/comment_user_email"
+                app:layout_constraintStart_toStartOf="@+id/comment_user_email"
                 android:layout_marginTop="16dp" android:fontFamily="@font/roboto" android:maxLines="3"
                 android:ellipsize="end"
         />
         <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/button2"
+                android:id="@+id/more_details"
                 android:layout_marginBottom="16dp"
-                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@+id/user_username"
-                app:layout_constraintTop_toBottomOf="@+id/user_username" android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@+id/comment_body"
+                app:layout_constraintTop_toBottomOf="@+id/comment_body" android:layout_marginTop="8dp"
                 style="@style/Widget.AppCompat.Button.Borderless" android:textSize="12sp"
                 android:text="@string/more_details" />
     </androidx.constraintlayout.widget.ConstraintLayout>
