--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,9 @@
         tools:context=".MainActivity">
 
 
-    <fragment
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:name="com.simplekjl.tddkt.fragments.UsersFragment"
+    <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:id="@+id/fragment" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
