--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
+        android:id="@+id/post_card"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
@@ -40,7 +41,7 @@
                 android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/post_username"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                 android:fontFamily="@font/roboto" android:maxLines="1"
-                android:ellipsize="end"/>
+                android:ellipsize="end" android:textStyle="bold"/>
         <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
