--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -1,14 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".fragments.UserProfileFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+    <!--Variables -->
+    <data>
+        <import type="android.view.View"/>
+        <variable name="user" type="com.simplekjl.tddkt.data.models.User"/>
+    </data>
+    <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+            tools:context=".fragments.UserProfileFragment">
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            <com.mikhaellopez.circularimageview.CircularImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@mipmap/ic_launcher"
+                    app:civ_border_color="#EEEEEE"
+                    app:civ_border_width="1dp"
+                    app:civ_shadow="true"
+                    app:civ_shadow_radius="4"
+                    app:civ_shadow_color="#8BC34A"
+                    android:id="@+id/profile_user_photo"
+                    android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/profile_username"
+                    android:text="@{user.username}"
+                    tools:text="simplekjl"
+                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/profile_user_photo"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                    android:fontFamily="@font/roboto_medium"/>
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/profile_name"
+                    android:drawableStart="@drawable/ic_user_regular"
+                    android:text="@{user.name}"
+                    tools:text="Jose Luis Crisostomo" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="16dp" android:layout_marginTop="32dp"
+                    app:layout_constraintTop_toBottomOf="@+id/profile_username" android:drawablePadding="6dp"
+                    android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/profile_email" android:layout_marginTop="16dp"
+                    android:text="@{user.email}"
+                    app:layout_constraintTop_toBottomOf="@+id/profile_name" tools:text="jl.cs606@gmail.com"
+                    android:drawablePadding="6dp" android:drawableStart="@drawable/ic_envelope_regular"
+                    app:layout_constraintStart_toStartOf="@+id/profile_name"
+                    app:layout_constraintEnd_toEndOf="@+id/profile_name"/>
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/profile_website"
+                    android:text="@{user.website}"
+                    app:layout_constraintTop_toBottomOf="@+id/profile_email" android:layout_marginTop="16dp"
+                    app:layout_constraintEnd_toEndOf="@+id/profile_email"
+                    app:layout_constraintStart_toStartOf="@+id/profile_email"
+                    tools:text="http://www.github.com/simplekjl"
+                    android:drawableStart="@drawable/ic_external_link_alt_solid" android:drawablePadding="6dp"/>
+            <com.google.android.gms.maps.MapView
+                    android:layout_width="0dp"
+                    android:layout_height="200dp"
+                    android:id="@+id/profile_map_location"
+                    app:layout_constraintEnd_toEndOf="@+id/profile_website"
+                    app:layout_constraintStart_toStartOf="@+id/profile_company"
+                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/profile_company"/>
+            <TextView
+                    android:text="@string/posts_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="@+id/profile_map_location"
+                    android:id="@+id/profile_posts" android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/profile_map_location"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:fontFamily="@font/roboto_medium"/>
+            <FrameLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/profile_posts"
+                    app:layout_constraintEnd_toEndOf="@+id/profile_map_location"
+                    app:layout_constraintStart_toStartOf="@+id/profile_posts"
+                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
+                    android:id="@+id/profile_fragment">
 
-</FrameLayout>
+            </FrameLayout>
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/profile_company"
+                    android:visibility="visible"
+                    android:text="@{user.companyDetails}" android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/profile_website"
+                    app:layout_constraintEnd_toEndOf="@+id/profile_website"
+                    app:layout_constraintStart_toStartOf="@+id/profile_website" tools:text="Tillster Inc."
+                    android:drawablePadding="6dp" android:drawableStart="@drawable/ic_building_solid"/>
+            <ProgressBar
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/progressBar"
+                    android:visibility="invisible"
+                    tools:visibility="invisible" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="@+id/profile_fragment"
+                    app:layout_constraintHorizontal_bias="0.498"
+                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.533"/>
+
+            <TextView
+                    android:text="@string/select_a_post_to_see_the_comments"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/error_message" android:layout_weight="1"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:visibility='@{user != null ? View.GONE : View.VISIBLE}'
+                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+</layout>
